[gd_scene load_steps=25 format=3 uid="uid://cqe6cbl1vagu6"]

[ext_resource type="Script" path="res://barkeep-game/scripts/counterprovider.gd" id="1_63kcx"]
[ext_resource type="PackedScene" uid="uid://cshw161vw4lw3" path="res://barkeep-game/components/counter.tscn" id="1_hqns3"]
[ext_resource type="PackedScene" uid="uid://bsrmrfo2ty4jy" path="res://barkeep-game/components/player.tscn" id="2_b02sf"]
[ext_resource type="Script" path="res://barkeep-game/scripts/playermover.gd" id="4_bkckm"]
[ext_resource type="Script" path="res://barkeep-game/scripts/scorekeeper.gd" id="4_cdkx4"]
[ext_resource type="Script" path="res://barkeep-game/scripts/soundplayer.gd" id="5_3kpmf"]
[ext_resource type="AudioStream" uid="uid://u5bj5jj42ye6" path="res://barkeep-game/components/Events/EventSounds/clicksound.tres" id="6_ot72g"]
[ext_resource type="Resource" uid="uid://cvnhvki8kl6l7" path="res://barkeep-game/components/Events/move_success.tres" id="6_r7wyy"]
[ext_resource type="AudioStream" uid="uid://bgbyxomckdffu" path="res://barkeep-game/components/Events/EventSounds/bonksound.tres" id="7_kcmd2"]
[ext_resource type="Script" path="res://barkeep-game/scripts/eventsound.gd" id="7_ymvhi"]
[ext_resource type="Resource" uid="uid://dn7wesg1curp" path="res://barkeep-game/components/Events/move_failure.tres" id="8_xga7a"]
[ext_resource type="Resource" uid="uid://b4f5epjt6m6bl" path="res://barkeep-game/components/Events/glass_moves.tres" id="9_f4geh"]
[ext_resource type="Resource" uid="uid://comjbwutktqdx" path="res://barkeep-game/components/Events/game_start.tres" id="10_ecjmd"]
[ext_resource type="AudioStream" uid="uid://csylri1c66ia4" path="res://barkeep-game/assets/shwiff.wav" id="12_tn2lk"]
[ext_resource type="Script" path="res://barkeep-game/scripts/eventlistener.gd" id="13_r24jf"]
[ext_resource type="AudioStream" uid="uid://dmlnqdrqi06du" path="res://barkeep-game/assets/keyboardtrill.wav" id="14_yjuwk"]
[ext_resource type="Script" path="res://barkeep-game/scripts/timekeeper.gd" id="18_3i3g4"]
[ext_resource type="Script" path="res://barkeep-game/scripts/viewpusher.gd" id="18_4w0su"]

[sub_resource type="SystemFont" id="SystemFont_uq2fv"]
font_names = PackedStringArray("Monospace")

[sub_resource type="LabelSettings" id="LabelSettings_0s2op"]
font = SubResource("SystemFont_uq2fv")
font_size = 30
outline_size = 8
outline_color = Color(0.631373, 0.247059, 0.298039, 1)

[sub_resource type="Resource" id="Resource_w6227"]
script = ExtResource("7_ymvhi")
event = ExtResource("6_r7wyy")
soundPlayer = NodePath("clickplayer")

[sub_resource type="Resource" id="Resource_0q84f"]
script = ExtResource("7_ymvhi")
event = ExtResource("8_xga7a")
soundPlayer = NodePath("bonkplayer")

[sub_resource type="Resource" id="Resource_l5p4d"]
script = ExtResource("7_ymvhi")
event = ExtResource("9_f4geh")
soundPlayer = NodePath("swipeplayer")

[sub_resource type="Resource" id="Resource_n3dd3"]
script = ExtResource("7_ymvhi")
event = ExtResource("10_ecjmd")
soundPlayer = NodePath("startplayer")

[node name="barkeep" type="Control"]
editor_description = "made a mess of this. the sfx system is fun, but i did too much /bad/ forard planning so now everything sucks to work with. just uh, refactor this like, completely."
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="verybackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.835294, 0.482353, 0.545098, 1)

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="hbox" type="HBoxContainer" parent="vbox"]
layout_mode = 2
alignment = 1

[node name="scoremargin" type="MarginContainer" parent="vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="score" type="Label" parent="vbox/hbox/scoremargin"]
layout_mode = 2
text = "20"
label_settings = SubResource("LabelSettings_0s2op")
horizontal_alignment = 2

[node name="timemargin" type="MarginContainer" parent="vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="time" type="Label" parent="vbox/hbox/timemargin"]
layout_mode = 2
text = "1:32"
label_settings = SubResource("LabelSettings_0s2op")

[node name="RichTextLabel" type="RichTextLabel" parent="vbox/hbox/timemargin"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[code]1:32[/code]"

[node name="gamebackground" type="ColorRect" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.988235, 1, 0.819608, 1)

[node name="barkeepgame" type="Node2D" parent="."]

[node name="counter" parent="barkeepgame" instance=ExtResource("1_hqns3")]
position = Vector2(0, 150)

[node name="counter2" parent="barkeepgame" instance=ExtResource("1_hqns3")]
position = Vector2(0, 300)

[node name="counter3" parent="barkeepgame" instance=ExtResource("1_hqns3")]
position = Vector2(0, 450)

[node name="counter4" parent="barkeepgame" instance=ExtResource("1_hqns3")]
position = Vector2(0, 600)

[node name="player" parent="barkeepgame" instance=ExtResource("2_b02sf")]
position = Vector2(420, 141)

[node name="gamescripts" type="Node" parent="barkeepgame"]

[node name="counterprovider" type="Node" parent="barkeepgame/gamescripts" node_paths=PackedStringArray("counters", "defaultCounter")]
script = ExtResource("1_63kcx")
counters = [NodePath("../../counter"), NodePath("../../counter2"), NodePath("../../counter3"), NodePath("../../counter4")]
defaultCounter = NodePath("../../counter2")

[node name="scorekeeper" type="Node" parent="barkeepgame/gamescripts"]
script = ExtResource("4_cdkx4")

[node name="playermover" type="Node" parent="barkeepgame/gamescripts" node_paths=PackedStringArray("counterProvider", "player")]
script = ExtResource("4_bkckm")
counterProvider = NodePath("../counterprovider")
player = NodePath("../../player")

[node name="soundplayer" type="Node" parent="barkeepgame/gamescripts"]
script = ExtResource("5_3kpmf")
soundMappings = Array[ExtResource("7_ymvhi")]([SubResource("Resource_w6227"), SubResource("Resource_0q84f"), SubResource("Resource_l5p4d"), SubResource("Resource_n3dd3")])

[node name="clickplayer" type="AudioStreamPlayer" parent="barkeepgame/gamescripts/soundplayer"]
stream = ExtResource("6_ot72g")

[node name="bonkplayer" type="AudioStreamPlayer" parent="barkeepgame/gamescripts/soundplayer"]
stream = ExtResource("7_kcmd2")

[node name="swipeplayer" type="AudioStreamPlayer" parent="barkeepgame/gamescripts/soundplayer"]
stream = ExtResource("12_tn2lk")

[node name="startplayer" type="AudioStreamPlayer" parent="barkeepgame/gamescripts/soundplayer"]
stream = ExtResource("14_yjuwk")

[node name="eventfilterer" type="Node" parent="barkeepgame/gamescripts"]
script = ExtResource("13_r24jf")
moveSuccess = ExtResource("6_r7wyy")
moveFailure = ExtResource("8_xga7a")
glassMove = ExtResource("9_f4geh")
gameStart = ExtResource("10_ecjmd")

[node name="timekeeper" type="Node" parent="barkeepgame/gamescripts"]
script = ExtResource("18_3i3g4")

[node name="Timer" type="Timer" parent="barkeepgame/gamescripts/timekeeper"]

[node name="viewpusher" type="Node" parent="barkeepgame/gamescripts"]
script = ExtResource("18_4w0su")

[connection signal="out_of_range_of_counters" from="barkeepgame/gamescripts/counterprovider" to="barkeepgame/gamescripts/eventfilterer" method="_on_counterprovider_out_of_range_of_counters"]
[connection signal="player_moved" from="barkeepgame/gamescripts/playermover" to="barkeepgame/gamescripts/eventfilterer" method="_on_playermover_player_moved"]
[connection signal="player_start" from="barkeepgame/gamescripts/playermover" to="barkeepgame/gamescripts/eventfilterer" method="_on_playermover_player_start"]
[connection signal="use_event" from="barkeepgame/gamescripts/eventfilterer" to="barkeepgame/gamescripts/soundplayer" method="_on_eventfilterer_use_event"]
[connection signal="timeout" from="barkeepgame/gamescripts/timekeeper/Timer" to="barkeepgame/gamescripts/timekeeper" method="_on_timer_timeout"]
